Updated People page with new members

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -26,14 +26,15 @@
                         <nav id="primary-menu" class="navbar">
 
                             <ul class="ip_nav" style="display: flex;flex-direction: column; height: 50vh">
-                                <li><a class="blink" href="#baba" style="color: #3aff00">BabaG</a>
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#baba">BabaG</a>
                                 </li>
-                                <li><a href="#about">About</a>
-                                </li>
+                                <!--<li><a href="#about">About</a>-->
+                                <!--</li>-->
                                 <li><a href="#people">People</a>
                                 </li>
-                                <li><a href="#careers">Careers</a>
-                                </li>
+                                <!--<li><a href="#careers">Careers</a>-->
+                                <!--</li>-->
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
@@ -73,7 +74,8 @@
 
                                 <div id="ip_second_div" class="center divcenter row clearfix commonheight " style="">
                                     <!-- Content tha appears on the second half of the screen -->
-                                    <p class="IP_content" style=""> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                                    <p class="IP_content" style=""> We are a Mysore based technology lab that engineers world class distributed information systems <br>on the web in an agile and lean fashion.
+                                      We are currently building BabaG</p>
                                 </div>
                             </div>
                         </div>
@@ -267,11 +269,22 @@
                                         </a>
                                         <br>
                                         <a class="person-link IP_person" href="https://www.linkedin.com/in/krishna-m-v-89a349137/" target="_blank">
-                                            <img alt="Krishna MV" class="human grayscale" src="assets/Krishna.jpg" />
+                                            <img alt="Harsha V" class="human grayscale" src="assets/Harsha.jpg" />
                                         </a>
 
                                         <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
                                             <img alt="Nikhil V V" class="human grayscale" src="assets/Nik.jpg" />
+                                        </a>
+
+                                         <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                            <img alt="Bharat G" class="human grayscale" src="assets/Bharat.jpg" />
+                                         </a>
+                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                          <img alt="Divya" class="human grayscale" src="assets/Divya.jpg" />
+                                        </a>
+
+                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                          <img alt="Daksha" class="human grayscale" src="assets/Daksha.jpg" />
                                         </a>
                                     </p>
 
