Changed the fb logo position

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -92,9 +92,9 @@
                                             <!-- <div class="babag"></div> -->
                                             <!-- <div class="heroimage"></div> -->
                                             <b class="IP_heading" style="">BabaG</b><br><i class="IP_subheading" style="">Namma smart friend!</i>
-                                            <br>
+                                            <!--<br>-->
                                             <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
-                                            <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
+                                            <!--<a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>-->
                                         </h2>
 
 
