Changed the links of all the images

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -87,11 +87,11 @@
                                 <div id = "IP_top" class="col_full center nomargin nopadding" style="">
 
                                     <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                      <a href="https://www.babag.com/"> <img src="/assets/BabaG.png" class="babag"> </a>
+                                      <a href="https://www.babag.com/" target="_blank"> <img src="/assets/BabaG.png" class="babag"> </a>
                                         <h2 class=" herotext" style="">
                                             <!-- <div class="babag"></div> -->
                                             <!-- <div class="heroimage"></div> -->
-                                            <b class="IP_heading" style="">BabaG</b><br><i class="IP_subheading" style="">Namma smart friend!</i>
+                                          <a href="https://www.babag.com/" target="_blank" style ="color: inherit;"><b class="IP_heading" style="">BabaG</b></a><br><i class="IP_subheading" style="">Namma smart friend!</i>
                                             <!--<br>-->
                                             <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
                                             <!--<a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>-->
@@ -267,7 +267,7 @@
                                         <a class="person-link IP_person" href="https://www.linkedin.com/in/kratik-nayak-a75012b6/" target="_blank">
                                             <img alt="Kratik Nayak" class="human grayscale" src="assets/Kratik.jpg" />
                                         </a>
-                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/krishna-m-v-89a349137/" target="_blank">
+                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/harsha-vardhan-8263278a/" target="_blank">
                                             <img alt="Harsha V" class="human grayscale" src="assets/Harsha.jpg" />
                                         </a>
                                         <br>
@@ -276,14 +276,14 @@
                                             <img alt="Nikhil V V" class="human grayscale" src="assets/Nik.jpg" />
                                         </a>
 
-                                         <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                         <a class="person-link IP_person" href="https://www.behance.net/bharatgane4e26" target="_blank">
                                             <img alt="Bharat G" class="human grayscale" src="assets/Bharat.jpg" />
                                          </a>
-                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/divya-bharath-1751a122/" target="_blank">
                                           <img alt="Divya" class="human grayscale" src="assets/Divya.jpg" />
                                         </a>
 
-                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                        <a class="person-link IP_person" href="https://www.linkedin.com/in/daksha-malagatti-0763ab13b/" target="_blank">
                                           <img alt="Daksha" class="human grayscale" src="assets/Daksha.jpg" />
                                         </a>
                                     </p>
