Added content to person page

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -240,7 +240,9 @@
                                     <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                         <div id ="fireimage" class="heroimage"></div>
                                         <p class="other_content" style="">
-                                            <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
+                                          We are a cross functional all-star team of passionate Engineers, Analysts and <br>
+                                          Content Developers working iteratively towards creating disproportionate value<br>
+                                          for the Indian eco system by eking out a new age personalized and<br> localized discovery platform
                                         </p>
                                     </h2>
                                 </div>
