Added content to babaG buttons

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -110,8 +110,8 @@
                                         <div id="1" style="width: 33%;float: left">
                                            <button id="babag-what" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>What?</b></button>
                                             <div id="babag-what-answer" style='display:none;color:black;'>
-                                              <p>
-                                                foo foo bar bar<br> foo bar foo bar
+                                              <p style=" font-size: 17px">
+                                                Provides localised and <br>personalised content and services.
                                               </p>
                                             </div>
                                         </div>
@@ -120,8 +120,8 @@
                                           <button id="babag-why" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>Why?</b></button>
 
                                           <div id="babag-why-answer" style='display:none;color:black;'>
-                                            <p >
-                                              foo foo bar bar<br> foo bar foo bar
+                                            <p style=" font-size: 17px">
+                                              Interactive and conversational AI Chatbot <br>augmented with Machine Learing.
                                             </p>
                                           </div>
                                         </div>
@@ -131,8 +131,9 @@
                                           <button id="babag-who" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>Who?</b></button>
 
                                           <div id="babag-who-answer" style='display:none;color:black;'>
-                                            <p>
-                                                foo foo bar bar<br> foo bar foo bar
+                                            <p style=" font-size: 17px">
+                                              We are a cross functional all-star team of passionate people working
+                                              iteratively towards creating disproportionate value for the Indian eco-system.
                                             </p>
                                           </div>
                                         </div>
