--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -117,7 +117,7 @@
                                         </div>
                                         <!--  -->
                                         <div id="2" style="width: 33%;float: left">
-                                          <button id="babag-why" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>Why?</b></button>
+                                          <button id="babag-why" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>How?</b></button>
 
                                           <div id="babag-why-answer" style='display:none;color:black;'>
                                             <p style=" font-size: 17px">
@@ -128,12 +128,11 @@
                                         <!--  -->
                                         <div id='3' style="width: 33%;float: left">
 
-                                          <button id="babag-who" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>Who?</b></button>
+                                          <button id="babag-who" class="button button-large button-border button-rounded tright IP_button" style="width: auto; padding: 0px 43px"><b>For Whom?</b></button>
 
                                           <div id="babag-who-answer" style='display:none;color:black;'>
                                             <p style=" font-size: 17px">
-                                              We are a cross functional all-star team of passionate people working
-                                              iteratively towards creating disproportionate value for the Indian eco-system.
+                                              Targeted at the bulk of new age Indian Users
                                             </p>
                                           </div>
                                         </div>
@@ -384,8 +383,8 @@
                                 <div id ="contact_text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                     <h2 class=" herotext" style="">
                                         <!-- <div class="heroimage"></div> -->
-                                        <p class="IP_subheading" style="font-size:15px;">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.
+                                        <p class="IP_subheading" style="font-size:25px;">
+                                        For any queries please leave us a message here.
                                         </p>
                                     </h2>
                                 </div>
