--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -91,7 +91,7 @@
                                         <h2 class=" herotext" style="">
                                             <!-- <div class="babag"></div> -->
                                             <!-- <div class="heroimage"></div> -->
-                                          <a href="https://www.babag.com/" target="_blank" style ="color: inherit;"><b class="IP_heading" style="">BabaG</b></a><br><i class="IP_subheading" style="">Namma smart friend!</i>
+                                          <a href="https://www.babag.com/" target="_blank" style ="color: inherit;"><b class="IP_heading" style="">BabaG</b></a><br><i class="IP_subheading" style="">Nimma smart friend!</i>
                                             <!--<br>-->
                                             <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
                                             <!--<a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>-->
